--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "sass": "^1.35.1",
+    "stripe": "^8.155.0"
   },
   "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
     "eslint": "7.28.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "typescript": "^4.3.3"
   }
 }
