--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.3.0",
     "next": "11.0.0",
+    "next-auth": "^3.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -17,6 +19,7 @@
     "stripe": "^8.155.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "eslint": "7.28.0",
